# sugarpowder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: init.yml
src/: test.py
src/sugarpowder/: dates.py  infixes.py  mark_time.py  pipes.py  serialization.py  utils.py  witherr.py  zmap.py
sugarpowder/: __init__.py
