[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sugarpowder"
version = "1.3.0"
authors = [
  { name="Geunseong Jung", email="dreamwayjgs@gmail.com" },
]
description = "Package of Python syntactic sugars inspired by Elixir, Go, Rust, Julia, and other languages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "pyarrow",
  "blosc",
  "dill",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dreamwayjgs/sugarpowder"
"Bug Tracker" = "https://github.com/dreamwayjgs/sugarpowder/issues"